:sparkles: set project layout

--- a/flask-tutorial/.gitignore
+++ b/flask-tutorial/.gitignore
@@ -1,25 +1,14 @@
-.DS_Store
-.env
-.flaskenv
+venv/
+
 *.pyc
-*.pyo
-env/
-env*
+__pycache__/
+
+instance/
+
+.pytest_cache/
+.coverage
+htmlcov/
+
 dist/
 build/
-*.egg
 *.egg-info/
-_mailinglist
-.tox/
-.cache/
-.pytest_cache/
-.idea/
-docs/_build/
-
-# Coverage reports
-htmlcov/
-.coverage
-.coverage.*
-*,cover
-
-venv
